Fix missing colors in classes, outdated IDs, add item list theming (#17)
* Fix missing cm-editor background colors

* Fix note list background colors, add note item hover and selected colors (#2)

Fixes the coloring scheme of the two panels on the left. Some IDs were outdated, some classes were missing.

--- a/src/frappe/userchrome.css
+++ b/src/frappe/userchrome.css
@@ -233,8 +233,8 @@ div[height="50"] button span {
 	color: var(--ctp-frappe-text) !important;
 }
 
-.sc-hCPjZK.fJjcQe{
-	background-color: var(--ctp-frappe-mantle) !important;
+.sc-dtInlm.dUXxSp {
+  background-color: var(--ctp-frappe-mantle) !important;
 }
 .new-note-todo-buttons > button {
 	background-color: var(--ctp-frappe-lavender) !important;
@@ -275,8 +275,16 @@ div[height="50"] button span {
 	background-color: var(--ctp-frappe-overlay1) !important;
 }
 
+.note-list-item:hover {
+  background-color: var(--ctp-frappe-overlay0) !important;
+}
+
 .item-list.note-list .list-item-container::before {
 	border: none !important;
+}
+
+.note-list-item::before{
+  border: none !important;
 }
 
 .note-list .list-item-container a {
@@ -290,8 +298,20 @@ div[height="50"] button span {
 	background-color: var(--ctp-frappe-base) !important;
 }
 
+.list-item-wrapper.-selected {
+  background-color: var(--ctp-frappe-base) !important;
+}
+
+.note-list-item > .content.-selected {
+  background-color: var(--ctp-frappe-surface2) !important;
+}
+
 .note-list .list-item-container a:hover {
 	color: var(--ctp-frappe-text) !important;
+}
+
+.list-item-wrapper.-highlight-on-hover:hover {
+  background-color: var(--ctp-frappe-surface1);
 }
 
 /* Add "..." to notes with long titles */
@@ -410,6 +430,11 @@ a[Title="Tags"] + div > span {
 /* Header */
 .cm-header {
 	color: var(--ctp-frappe-lavender) !important;
+}
+
+/* Markdown editor */
+.cm-editor{
+    background-color: var(--ctp-frappe-base) !important
 }
 
 /* Italics/Emphasis, Bold, BoldItalics */
